[package]
name = "dyn_tor"
version = "0.1.0"
authors = ["Nikolay Dobrovolsky <uniconductive@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8" }
futures = { version = "0.3.21" }
log = "0.4.14"
log4rs = "1.0.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

[profile.release]
overflow-checks = true
lto = true
#opt-level = 'z'  # Optimize for size.
codegen-units = 1
strip = true

[profile.dev]
